--- a/src/.styles/resize.css
+++ b/src/.styles/resize.css
@@ -1,4 +1,4 @@
-body.ytcenter-site-watch.ytcenter-resize-disaligned.flex-width-enabled>* #page {
+body.ytcenter-site-watch.flex-width-enabled>* #page {
 	max-width: none !important;
 }
 
